--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<script>
-    alert("Welcome to CodingVilla This is a fully bootstrap Designed Demo Web. Frontend::bootstrap only , Backend will be available soon",window.location="/codingvilla/index2.html");
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script>
+        alert("Welcome to CodingVilla This is a fully bootstrap Designed Demo Web. Frontend::bootstrap only , Backend will be available soon",window.location="index2.html");
+    </script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
