--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script>
-        alert("Welcome to CodingVilla This is a fully bootstrap Designed Demo Web. Frontend::bootstrap only , Backend will be available soon",window.location="index2.html");
+        alert("Welcome to CodingVilla This is a fully bootstrap Designed Demo Web. Frontend::bootstrap only , Backend Tech support will be available soon",window.location="index2.html");
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
